Fixed images to stretch across screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -247,14 +247,18 @@ label {
 }
 
 .img-hashtag {
-    object-fit: fill;
-    width: 350px;
+    width: 100%;
     height: 250px;
 }
 
 /* Content */
 .center {
     text-align: center;
+}
+
+.wrapper {
+    width: 100%;
+    flex: 1 1 0;
 }
 
 /* Footer */
